# applicative-quoters

./: ChangeLog  LICENSE  Magic.hs  README  applicative-quoters.cabal
Control/Applicative/QQ/: ADo.hs  Idiom.hs
